Fixed minor errors (remove extra spaces)

--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,8 +1,8 @@
 .profile {
- display: flex; 
+ display: flex;
  justify-content: center;
  align-items: center;
- max-width: 880px;;
+ max-width: 880px;
  font-family: 'Inter', Arial, sans-serif;
 }
 
